Fixed login function to handle redundancy and if they click back button, also reattach listener only once auth is logged in

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.solutions.coyne.betathetapi.LogInActivity">
+    <Spinner
+        android:id="@+id/chapter_spinner"
+        android:entries="@array/chapter_arrays"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    
     <EditText
         android:id="@+id/school"
         android:text="Eta Delta"
