--- a/app/src/main/res/layout/activity_firebase_test.xml
+++ b/app/src/main/res/layout/activity_firebase_test.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/send"
-        android:text="Send"
+        android:text="@string/send_button_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button
