--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,16 +6,17 @@
 
     <EditText
         android:id="@+id/school"
-        android:hint="School as adapter"
+        android:hint="@string/test_school"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
-        android:hint="email"
+        android:hint="@string/email"
         android:id="@+id/email_signin"
+        android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
-        android:hint="password"
+        android:hint="@string/password"
         android:id="@+id/password_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,6 +25,6 @@
         android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In"/>
+        android:text="@string/sign_in"/>
 
 </LinearLayout>
