--- a/app/src/main/res/layout/fragment_message_room.xml
+++ b/app/src/main/res/layout/fragment_message_room.xml
@@ -22,6 +22,7 @@
             android:id="@+id/photoPickerButton"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:contentDescription="@string/photo_picker"
             android:background="@android:drawable/ic_menu_gallery" />
 
         <EditText
