--- a/app/src/main/res/layout/fragment_message_rooms.xml
+++ b/app/src/main/res/layout/fragment_message_rooms.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
 
     <TextView
-        android:text="Chat Rooms"
+        android:text="@string/chat_rooms_title"
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
