--- a/app/src/main/res/layout/member_list_item.xml
+++ b/app/src/main/res/layout/member_list_item.xml
@@ -12,6 +12,7 @@
         android:padding="16dp">
     <ImageView
             android:id="@+id/profile_photo"
+            android:contentDescription="@string/member_photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
