--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -14,19 +14,20 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="100dp"
+        android:contentDescription="@string/fraternity"
         app:srcCompat="@drawable/btp_coat_of_arms"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Beta Theta Pi"
+        android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Eta Delta Chapter"/>
+        android:text="@string/test_school"/>
 
 </LinearLayout>
