--- a/app/src/main/res/menu/main2.xml
+++ b/app/src/main/res/menu/main2.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/sign_out"
         android:orderInCategory="1"
-        android:title="Sign out"
+        android:title="@string/sign_out"
         app:showAsAction="never"/>
 </menu>
